--- a/index.html
+++ b/index.html
@@ -3,15 +3,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css" integrity="sha512-EZLkOqwILORob+p0BXZc+Vm3RgJBOe1Iq/0fiI7r/wJgzOFZMlsqTa29UEl6v6U6gsV4uIpsNZoV32YZqrCRCQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="./css/main.css">
     <title>Crezell.</title>
 </head>
 <body>
     <div id="loader">Loader</div>
     <main id="content">
         <article>
-            <h1 data-l10n="title"></h1>
-            <p data-l10n="hello"></p>
-            <section></section>
+            <h1 data-l10n="title" class="text-center"></h1>
+            <p data-l10n="intro"></p>
+            <section>
+                <figure></figure>
+                <p></p>
+            </section>
         </article>
     </main>
     <script src="./js/localization.js" type="module"></script>
