recipe intro added

--- a/index.html
+++ b/index.html
@@ -9,12 +9,34 @@
 <body>
     <div id="loader">Loader</div>
     <main id="content">
-        <article>
-            <h1 data-l10n="title" class="text-center"></h1>
-            <p data-l10n="intro"></p>
+        <article class="container">
             <section>
-                <figure></figure>
-                <p></p>
+                <div class="row">
+                    <div class="twelve columns">
+                        <h1 data-l10n="title" class="text-center"></h1>
+                        <h2 data-l10n="title-zh" class="text-center"></h2>
+                        <p data-l10n="intro-part-one"></p>
+                        <p data-l10n="intro-part-two"></p>
+                        <p data-l10n="intro-part-three"></p>
+                    </div>
+                </div>
+            </section>
+            <section>
+                <div class="row">
+                    <div class="six columns">
+                        <figure>
+                            <img src="./images/main.jpg" alt="Sichuan Boiled Beef (水煮牛肉 – Shuizhu Niurou)">
+                        </figure>
+                    </div>
+                    <div class="six columns">
+                        <p class="text-center">
+                            <a href="https://www.chinasichuanfood.com/shui-zhu-beef/" data-l10n="original-recipe-link"></a>
+                        </p>
+                        <p data-l10n="recipe-intro-one"></p>
+                        <p data-l10n="recipe-intro-two"></p>
+                        <p data-l10n="recipe-intro-three"></p>
+                    </div>
+                </div>
             </section>
         </article>
     </main>
