--- a/index.html
+++ b/index.html
@@ -1,40 +1,136 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css" integrity="sha512-EZLkOqwILORob+p0BXZc+Vm3RgJBOe1Iq/0fiI7r/wJgzOFZMlsqTa29UEl6v6U6gsV4uIpsNZoV32YZqrCRCQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css"
+        integrity="sha512-EZLkOqwILORob+p0BXZc+Vm3RgJBOe1Iq/0fiI7r/wJgzOFZMlsqTa29UEl6v6U6gsV4uIpsNZoV32YZqrCRCQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/main.css">
     <title>Crezell.</title>
 </head>
+
 <body>
-    <div id="loader">Loader</div>
     <main id="content">
-        <article class="container">
+        <div id="loader">Loader</div>
+        <article>
             <section>
                 <div class="row">
-                    <div class="twelve columns">
-                        <h1 data-l10n="title" class="text-center"></h1>
-                        <h2 data-l10n="title-zh" class="text-center"></h2>
-                        <p data-l10n="intro-part-one"></p>
-                        <p data-l10n="intro-part-two"></p>
-                        <p data-l10n="intro-part-three"></p>
+                    <div class="twelve columns position-relative">
+                        <figure>
+                            <img src="./images/main.jpg" alt="Sichuan Boiled Beef (水煮牛肉 – Shuizhu Niurou)">
+                        </figure>
+                        <h1 data-l10n="title"></h1>
+                        <h2 data-l10n="title-zh"></h2>
                     </div>
                 </div>
             </section>
             <section>
                 <div class="row">
-                    <div class="six columns">
+                    <div class="twelve columns">
+                        <div>
+                            <p data-l10n="intro-part-one"></p>
+                            <p data-l10n="intro-part-two"></p>
+                            <p data-l10n="intro-part-three"></p>
+                            <p class="text-center">
+                                <a href="https://www.chinasichuanfood.com/shui-zhu-beef/"
+                                    data-l10n="original-recipe-link"></a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section>
+                <div class="row border-bottom">
+                    <div class="twelve columns">
                         <figure>
-                            <img src="./images/main.jpg" alt="Sichuan Boiled Beef (水煮牛肉 – Shuizhu Niurou)">
+                            <img src="./images/1.jpg" alt="Sichuan Boiled Beef (水煮牛肉 – Shuizhu Niurou)">
                         </figure>
                     </div>
-                    <div class="six columns">
-                        <p class="text-center">
-                            <a href="https://www.chinasichuanfood.com/shui-zhu-beef/" data-l10n="original-recipe-link"></a>
-                        </p>
+                    <div class="twelve columns">
+                        <h2 data-l10n="overview"></h2>
                         <p data-l10n="recipe-intro-one"></p>
                         <p data-l10n="recipe-intro-two"></p>
                         <p data-l10n="recipe-intro-three"></p>
+                    </div>
+                </div>
+            </section>
+            <section>
+                <div class="row border-bottom">
+                    <div class="twelve columns">
+                        <h4 data-l10n="preparation-time"></h4>
+                        <ul>
+                            <li data-l10n="prep-time"></li>
+                            <li data-l10n="cook-time"></li>
+                            <li data-l10n="total-time"></li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+            <section>
+                <div class="row border-bottom">
+                    <div class="twelve columns">
+                        <h4 data-l10n="ingredients"></h4>
+                        <ul>
+                            <li data-l10n="ingredients-one"></li>
+                            <li data-l10n="ingredients-two"></li>
+                            <li data-l10n="ingredients-three"></li>
+                            <li data-l10n="ingredients-four"></li>
+                            <li data-l10n="ingredients-five"></li>
+                            <li data-l10n="ingredients-six"></li>
+                            <li data-l10n="ingredients-seven"></li>
+                            <li data-l10n="ingredients-eight"></li>
+                            <li data-l10n="ingredients-nine"></li>
+                            <li data-l10n="ingredients-ten"></li>
+                        </ul>
+                        <h5 data-l10n="soup-ingredients"></h5>
+                        <ul>
+                            <li data-l10n="soup-ingredients-one"></li>
+                            <li data-l10n="soup-ingredients-two"></li>
+                            <li data-l10n="soup-ingredients-three"></li>
+                            <li data-l10n="soup-ingredients-four"></li>
+                            <li data-l10n="soup-ingredients-five"></li>
+                            <li data-l10n="soup-ingredients-six"></li>
+                            <li data-l10n="soup-ingredients-seven"></li>
+                            <li data-l10n="soup-ingredients-eight"></li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+            <section>
+                <div class="row border-bottom">
+                    <div class="twelve columns">
+                        <h4 data-l10n="instructions"></h4>
+                        <ol>
+                            <li data-l10n="instructions-one"></li>
+                            <li data-l10n="instructions-two"></li>
+                            <li data-l10n="instructions-three"></li>
+                            <li data-l10n="instructions-four"></li>
+                            <li data-l10n="instructions-five"></li>
+                            <li data-l10n="instructions-six"></li>
+                        </ol>
+                    </div>
+                </div>
+            </section>
+            <section>
+                <div class="row">
+                    <div class="twelve columns">
+                        <h4 data-l10n="nutrition"></h4>
+                        <span class="inline-info" data-l10n="calories"></span>
+                        <span class="inline-info" data-l10n="carbohydrates"></span>
+                        <span class="inline-info" data-l10n="protein"></span>
+                        <span class="inline-info" data-l10n="fat"></span>
+                        <span class="inline-info" data-l10n="saturated-fat"></span>
+                        <span class="inline-info" data-l10n="trans-fat"></span>
+                        <span class="inline-info" data-l10n="cholesterol"></span>
+                        <span class="inline-info" data-l10n="sodium"></span>
+                        <span class="inline-info" data-l10n="potassium"></span>
+                        <span class="inline-info" data-l10n="fiber"></span>
+                        <span class="inline-info" data-l10n="sugar"></span>
+                        <span class="inline-info" data-l10n="vitamin-a"></span>
+                        <span class="inline-info" data-l10n="vitamin-c"></span>
+                        <span class="inline-info" data-l10n="calcium"></span>
+                        <span class="inline-info" data-l10n="iron"></span>
                     </div>
                 </div>
             </section>
@@ -42,4 +138,5 @@
     </main>
     <script src="./js/localization.js" type="module"></script>
 </body>
+
 </html>
