added open graph protocol

--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <html lang="en">
 
 <head>
+    <meta property="og:title" content="Crezell | Sichuan Boiled Beef Recipe Page" />
+    <meta property="og:description" content="A basic project implementing Skeleton HTML Boilerplate." />
+    <meta property="og:image" content="https://cre3z.github.io/skeleton/images/main.jpg" />
+    <meta property="og:url" content="https://cre3z.github.io/skeleton/" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css"
         integrity="sha512-EZLkOqwILORob+p0BXZc+Vm3RgJBOe1Iq/0fiI7r/wJgzOFZMlsqTa29UEl6v6U6gsV4uIpsNZoV32YZqrCRCQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/main.css">
-    <title>Crezell.</title>
+    <title>Crezell | Sichuan Boiled Beef Recipe Page</title>
 </head>
 
 <body>
